--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
+  <meta property="og:title" content="doWith">
   <meta property="og:type" content="">
-  <meta property="og:url" content="">
+  <meta property="og:url" content="www.dowith.app">
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
@@ -25,17 +25,62 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>doWith</p>
+  <div class="header">
+    <div class="nav">
+      <div id="demo-video" class="nav-item">DEMO VIDEO</div>
+    </div>
+    <div class="titlebar">
+      <div id="demo-video-mobile"><a href="https://www.youtube.com/watch?v=7Fxo461e00U&feature=youtu.be">DEMO VIDEO</a></div>
+      <h1 class="logo">doWith</h1>
+    </div>
+  </div>
+  <div class="subscribe">
+
+    <div class="form-content">
+      <div class="tagline">
+        Meet new people. In the real world.
+      </div>
+      <div class="tagsub">
+        (while staying safe and socially distant for now)
+      </div>
+      <div class="prompt">
+        Sign up to be kept in the loop and get early access when we launch
+      </div>
+      <!-- Begin Mailchimp Signup Form -->
+      <div id="mc_embed_signup">
+        <form action="https://app.us2.list-manage.com/subscribe/post?u=cdbbed1fdc378e63e6815d71c&amp;id=22df514d91" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+            <div class="mc-field-group">
+              <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email">
+              <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_cdbbed1fdc378e63e6815d71c_22df514d91" tabindex="-1" value=""></div>
+          </div>
+        </form>
+      </div>
+      <!--End mc_embed_signup-->
+    </div>
+    <img class="crowd" src="img/Crowd BW.jpg">
+  </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
+  <div class="modal">
+    <div class="scrim"></div>
+    <iframe id="demo-youtube" width="1020" height="630" src="https://www.youtube.com/embed/7Fxo461e00U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
+  <!-- <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  </script> -->
+  <!-- <script src="https://www.google-analytics.com/analytics.js" async></script> -->
 </body>
 
 </html>
