--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <!-- Begin Mailchimp Signup Form -->
       <div id="mc_embed_signup">
-        <form action="https://app.us2.list-manage.com/subscribe/post?u=cdbbed1fdc378e63e6815d71c&amp;id=22df514d91" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <form action="https://app.us2.list-manage.com/subscribe/post?u=cdbbed1fdc378e63e6815d71c&amp;id=22df514d91" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
           <div id="mc_embed_signup_scroll">
             <div class="mc-field-group">
               <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email">
